# Demo

CtrlApp/: CMakeLists.txt  CtrlBtn.qml  LoginPage.qml  Main.qml  OpPage.qml  main.cpp  portcontroller.cpp  portcontroller.h  resource.qrc  serialport.cpp  serialport.h
MakeDLL/: CMakeLists.txt
YOLO/: Test.py  object-blurring.py  vision-eye.py
YOLO/Test/: k_test.py  kfold-cross-validation.py
